--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,5 @@
 ################################################################################
 
 /CachingTechniques-master
+/Sample-Direct-master/Sample-Direct-master
+/CQRSTraining/CQRSTraining
